--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<router-outlet name="autorization"></router-outlet>
 
 <app-main></app-main>
 
