--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="header navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#" routerLink = "/">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -29,8 +29,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-sign-in-alt  fa-lg"></i> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#" routerLink = "/signIn">Sign In</a></li>
-            <li><a href="#" routerLink = "/signUp">Sign Up</a></li>
+            <li><a href="#" [routerLink]="[{ outlets: { 'autorization': [ 'signIn'] }}]" skipLocationChange>Sign In</a></li>
+            <li><a href="#" [routerLink]="[{ outlets: { 'autorization': [ 'signUp'] }}]" skipLocationChange>Sign Up</a></li>
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li> -->
           </ul>
