--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-header></app-header>
+<div class="componentsContainer">
+
+<app-header class="header"></app-header>
 
 <router-outlet name="autorization"></router-outlet>
 
-<app-main></app-main>
+<app-main class="main"></app-main>
 
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
+
+</div>
