--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
-<p>
-  footer works!
-</p>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Powered by LinkCorp</a></li>  
+      </ul>
+    </div>
+</nav>
