--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,3 @@
-<p>
-  main works!
-</p>
+<div class="main" appMain>
+  <button type="button" class="btn btn-success" (click)="doThing($event)">View More</button>
+</div>
