--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Powered by LinkCorp</a></li>  
+        <li><a href="#">Lorem</a></li>  
       </ul>
     </div>
 </nav>
