--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,3 @@
 <div class="main" appMain>
-  <button type="button" class="btn btn-success" (click)="doThing($event)">View More</button>
+  <button type="button" class="btn btn-success" (click)="doThing($event)">Button</button>
 </div>
