some new corrections

--- a/src/app/autorization/sign-up/sign-up.component.html
+++ b/src/app/autorization/sign-up/sign-up.component.html
@@ -1,10 +1,10 @@
 <div class="input-group">
-  <span class="input-group-addon">Login</span>
+  <span class="input-group-addon" style="width: 25%">Login</span>
   <input type="text" placeholder="create your login..." class="form-control" aria-label="Amount (to the nearest dollar)">
 </div>
 
 <div class="input-group">
-  <span class="input-group-addon">Password</span>
+  <span class="input-group-addon" style="width: 25%">Password</span>
   <input type="text" placeholder="crete your password..." class="form-control" aria-label="Amount (to the nearest dollar)">
 </div>
 
