--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,4 +1,4 @@
-.main {
+.main-top {
     background-color: gray;
     height: 300px;
     color: white;
@@ -6,6 +6,16 @@
     text-align: center;
 }
 
-/* button {
-    display: none;
-} */
+.informationField {
+    width: 100%;
+    height: 30px;
+    background-color: black;
+}
+
+.main-top-details {
+    background-color: darkgrey;
+    height: 0px;
+    color: white;
+    transition: all 2s ease;
+    text-align: center;
+}
