--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
 
  <div class="main-top">
     <br>
-    <i class="fab fa-earlybirds fa-7x"></i>
+    <!-- <i class="fab fa-earlybirds fa-7x"></i> -->
     <br>
     <button (click)="newHeight = !newHeight" (click) = "newTextVal()">{{text}}</button>
  </div>
