--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,17 +2,65 @@
   <p>main works!</p>
 
  <div class="main-top">
-    <br>
-    <!-- <i class="fab fa-earlybirds fa-7x"></i> -->
-    <br>
-    <button (click)="newHeight = !newHeight" (click) = "newTextVal()">{{text}}</button>
+    <p>Hello World!</p>
+    <button (click)="newHeight = !newHeight" (click)="newDisplay = !newDisplay" (click) = "newTextVal()">{{text}}</button>
  </div>
  <div class="main-top-details" [style.height]="setNewHeight()">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quod ratione cum in possimus! Commodi, voluptatum voluptas? Aperiam consequatur optio impedit aliquid veniam, doloremque ex hic autem consectetur voluptates exercitationem.
+  <mat-card [style.display]="setNewDisplay()">
+    <mat-card-content>
+      <h2 class="example-h2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo rem commodi, voluptate dolorum soluta et blanditiis, cupiditate placeat mollitia deserunt unde dolores natus esse fugit temporibus cumque aspernatur ea quidem!
+      </h2>
+      <mat-tab-group class="demo-tab-group">
+        <mat-tab label="Tab 1">
+          <div class="demo-tab-content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue.
+            Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus.
+            In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec,
+            feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor,
+            orci enim rutrum enim, vel tempor sapien arcu a tellus.
+          </div>
+        </mat-tab>
+        <mat-tab label="Tab 2">
+          <div class="demo-tab-content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue.
+            Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus.
+            In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec,
+            feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor,
+            orci enim rutrum enim, vel tempor sapien arcu a tellus.
+          </div>  
+        </mat-tab>
+        <mat-tab label="Tab 4">
+          <div class="demo-tab-content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue.
+            Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus.
+            In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec,
+            feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor,
+            orci enim rutrum enim, vel tempor sapien arcu a tellus.
+          </div>  
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card-content>
+  </mat-card>
  </div>
 
  <div class="main-center">
-   <p>main center works!</p>
+    <mat-grid-list cols="4" rowHeight="100px">
+        <mat-grid-tile
+            *ngFor="let tile of tiles"
+            [colspan]="tile.cols"
+            [rowspan]="tile.rows"
+            [style.background]="tile.color">
+          {{tile.text}}
+        </mat-grid-tile>
+    </mat-grid-list>
+ </div>
+
+ <div class="main-bottom">
+  <p>main bottom works!</p>
  </div>
 
 </div>
+
+
+<!-- https://www.npmjs.com/package/ng2-page-slider -->
