--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,16 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" routerLink = "/">Brand</a>
+      <a class="navbar-brand" href="#" routerLink = "/">Building Company</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">LOGO <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#"><i class="fab fa-fort-awesome fa-lg"></i><span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="#" [routerLink]="[{ outlets: { 'chat': [ 'chat'] }}]" skipLocationChange>Chat</a></li>
       </ul>
       <!-- <form class="navbar-form navbar-left">
         <div class="form-group">
