--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,30 @@
+<div class="footer-top">
+  
+    <form action="">
+      <h2>IF YOU HAVE SOME <br> QUESTIONS OR RECOMMENDATIONS <br> PLEASE WRITE TO US</h2>
+      <input type="text" placeholder="Name*" style="width: 49%" required>
+      <input type="text" placeholder="Last Name*" style="width: 49%" required>
+      <br><br>
+      <input type="text" placeholder="E-mail*" required>
+      <br><br>
+      <input type="text" placeholder="Subject*" required>
+      <br><br>
+      <textarea rows="10" cols="50" name="text" placeholder="Message*"></textarea>
+      <br><br>
+      <button mat-raised-button (click)="messageSend()">SEND</button>
+    </form>
+</div>
+
+
+
+
+
+
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Lorem</a></li>  
+        <li><a href="#">LVIV 2018</a></li>  
       </ul>
     </div>
 </nav>
