--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <app-header class="header"></app-header>
 
-<router-outlet name="autorization"></router-outlet>
+<router-outlet></router-outlet>
 
 <app-main class="main"></app-main>
 
