--- a/src/app/autorization/sign-in/sign-in.component.css
+++ b/src/app/autorization/sign-in/sign-in.component.css
@@ -1,3 +1,7 @@
+div {
+    margin: 30px 0;
+}
+
 .input-group {
     width: 30%;
     margin: 0 auto;
@@ -7,5 +11,9 @@
 button {
     margin-left: 47%;
     background-color: #40B1FA;
+    color: white;
+}
+button:hover {
+    background-color: #222222;
     color: white;
 }
