--- a/src/app/autorization/sign-up/sign-up.component.html
+++ b/src/app/autorization/sign-up/sign-up.component.html
@@ -1,11 +1,20 @@
+<div>
 <div class="input-group">
   <span class="input-group-addon" style="width: 25%">Login</span>
-  <input type="text" placeholder="create your login..." class="form-control" aria-label="Amount (to the nearest dollar)">
+  <input type="text" placeholder="create your login..."
+                     class="form-control"
+                     aria-label="Amount (to the nearest dollar)"
+                     [(ngModel)] = "login" required>
 </div>
 
 <div class="input-group">
   <span class="input-group-addon" style="width: 25%">Password</span>
-  <input type="text" placeholder="crete your password..." class="form-control" aria-label="Amount (to the nearest dollar)">
+  <input type="text" placeholder="crete your password..."
+                     class="form-control"
+                     aria-label="Amount (to the nearest dollar)"
+                     [(ngModel)] = "password" required>
 </div>
 
-<button type="button" class="btn btn-default">Sign Up</button>
+<button type="button" class="btn btn-default"
+                      (click) = "addElementToConsole()">Sign Up</button>
+</div>
