--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,34 @@
 ul {
     text-align: center;
 }
+
+.footer-top {
+    padding: 30px 0;
+    height: auto;
+    background-color: #40B1FA;
+    display: flex;
+    justify-content: center;
+}
+.footer-top h2 {
+    color: white;
+    padding-bottom: 30px;
+}
+input {
+    background-color: inherit;
+    border: none;
+    border-bottom: 1px solid white;
+    width: 100%;
+    color: white;
+}
+input {outline:none;}
+textarea {
+    background-color: inherit;
+    border: 1px solid white;
+    margin-top: 15px;
+    width: 100%;
+    color: white;
+}
+::-webkit-input-placeholder {color: white;}
+::-moz-placeholder          {color: white;}/* Firefox 19+ */
+:-moz-placeholder           {color: white;}/* Firefox 18- */
+:-ms-input-placeholder      {color: white;}
