--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,29 +10,20 @@
       </button>
       <a class="navbar-brand" href="#" routerLink = "/">Building Company</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#"><i class="fab fa-fort-awesome fa-lg"></i><span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#" [routerLink]="[{ outlets: { 'chat': [ 'chat'] }}]" skipLocationChange>Chat</a></li>
+        <li class="active"><a href="#" onClick="document.location.reload(true)"><i class="fab fa-fort-awesome fa-lg"></i><span class="sr-only">(current)</span></a></li>
+        <!-- <li><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li> -->
+        <li><a routerLink="cabinet" skipLocationChange>Cabinet</a></li>
       </ul>
-      <!-- <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> -->
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-sign-in-alt  fa-lg"></i> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#" [routerLink]="[{ outlets: { 'autorization': [ 'signIn'] }}]" skipLocationChange>Sign In</a></li>
-            <li><a href="#" [routerLink]="[{ outlets: { 'autorization': [ 'signUp'] }}]" skipLocationChange>Sign Up</a></li>
-            <!-- <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li> -->
+            <li><a routerLink="signIn" skipLocationChange>Sign In</a></li>
+            <li><a  [routerLink]="'signUp'" skipLocationChange>Sign Up</a></li>
           </ul>
         </li>
       </ul>
