--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -7,7 +7,6 @@
     background-size: cover;
     position: relative;
 }
-
 .main-top p {
     font-size: 40px;
     font-family: 'Varela Round', sans-serif;
@@ -15,7 +14,6 @@
     padding-top: 30px;
     color: #40B1FA;
 }
-
 .main-top h5 {
     font-size: 20px;
     text-align: left;
@@ -24,7 +22,6 @@
     padding-bottom: 80px;
     margin: 0px;
 }
-
 .main-top button {
     position: absolute;
     bottom: 30px;
@@ -32,10 +29,10 @@
     color: #222222;
 }
 
-.fab:hover {
+/* .fab:hover {
     text-shadow: 1px 1px 2px #40B1FA, 0 0 25px #40B1FA, 0 0 5px #40B1FA;
     cursor: pointer;
-}
+} */
 
 .main-top-details {
     background-color: #222222;
@@ -51,6 +48,10 @@
     margin: 0px;
     clear: both;
 }
+.main-top-details h2 {
+    color: #40B1FA;
+    margin: 0px;
+}
 
 .main-center button {
     position: absolute;
@@ -65,15 +66,37 @@
     color: white;
     transition: all 2s ease;
     background-color: #222222;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: relative; */
 }
-.main-bottom h2, h3, p {
+.main-bottom p {
+    text-align: center;
+    font-size: 20px;
+    padding: 0 10%;
+    padding-top: 10px;
     margin: 0px;
 }
-.main-bottom h2, h3 {
+.main-bottom h4 {
+    font-size: 25px;
+    color: #40B1FA;
     text-align: center;
+    padding-top: 30px;
+    margin: 0;
+}
+.main-buttom-items {
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-around; */
+    display: inline-block;
+}
+.main-buttom-items button {
+    background-color: #40B1FA;
+    color: white;
+}
+.item-card {
+    max-width: 250px;
+    margin: 20px;
 }
  
 .demo-tab-content {
@@ -83,10 +106,3 @@
 .mat-card {
     padding: 20px;
 }
-
-
-.item-card {
-    max-width: 300px;
-    display: inline-block;
-    float: left;
-  }
